	PR c/46547 	* c-tree.h (in_late_binary_op): Move to c-family/c-common.h. 	* c-typeck.c (in_late_binary_op): Move to c-family/c-common.c.

c-family:
	* c-common.c (in_late_binary_op): Define.
	(c_common_truthvalue_conversion): Check in_late_binary_op before
	calling c_save_expr.
	* c-common.h (in_late_binary_op): Declare.

testsuite:
	* gcc.c-torture/compile/pr46547-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166951 138bc75d-0d04-0410-961f-82ee72b054a4