gcc/testsuite/gcc.c-torture/compile/pr46547-1.c
@@ -1,0 +1,6 @@
+void foo (void) {
+  _Bool d;
+  long double _Complex *s;
+
+  d = *s++;
+}
